tests/fail/SignedShiftRightAssign.java
package fail;

import java.lang.System;

public class SignedShiftRightAssign {
    public static void main(String[] args){
        int x = 0;
        System.out.println(x >>= 'a');
    }
}